🩹 fix form label overflowing

--- a/frontend/styles/components/forms.scss
+++ b/frontend/styles/components/forms.scss
@@ -4,8 +4,6 @@
 }
 
 .field-required {
-  text-wrap: nowrap; // to prevent the asterisk from wrapping to the next line
-
   &::after {
     content: '*';
     color: var(--#{$prefix}danger);
